--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,13 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <div id="chatbox"></div>
-  <input type="text" id="user-input" placeholder="Enter your message">
-  <button id="send-button">Send</button>
-  <script src="popup.js"></script>
+  <button id="startChat">Start Chat</button>
+  <div id="chat" hidden>
+    <div id="chatbox"></div>
+    <input type="text" id="user-input" placeholder="Enter your message">
+    <button id="send-button">Send</button>
+    <button id="fillButton">Fill</button>
+    <script src="popup.js"></script>
+  </div>
 </body>
 </html>
